cecil (0.6-2) UNRELEASED; urgency=low

  * debian/rules, debian/control:
    + updated for Mono 2.0 transition
  * debian/control:
    + added Homepage field, dropped from long description

 -- David Paleino <d.paleino@gmail.com>  Sat, 07 Feb 2009 21:08:00 +0100

cecil (0.6-1) unstable; urgency=low

  [ Jose Carlos Garcia Sogo ]
  * New upstream release
  * debian/control:
    + Bump Standards-Version. No changes needed
    + Depend on cli-common-dev (>= 0.5.4)
  * Use dh_clifixperms and dh_clistrip instead of manual stuff

  [ Sebastian Dröge ]
  * debian/install,
    debian/rules:
    + Build the assemblies by hand now as upstream has a broken build system.
    + Clean up and fix some things.
  * debian/patches/01_assembly-version.dpatch:
    + Change assembly version back to 0.5.0.0 as it's ABI compatible.

 -- Sebastian Dröge <slomo@debian.org>  Thu, 20 Mar 2008 18:03:02 +0100

cecil (0.5-2) unstable; urgency=low

  * Merge experimental branch and upload to unstable.
  * Make sure we use mono.snk key to sign binaries.

 -- Jose Carlos Garcia Sogo <jsogo@debian.org>  Sun, 15 Apr 2007 21:43:04 +0200

cecil (0.5-1) experimental; urgency=low

  * New upstream version.
  * debian/control:
     + Bump build dependency to cli-common-dev >= 0.4.4
     + In description, there is no need to say which software is also using
     this package.
     + ABI change, so change package name.
     + Change Replaces to Conflicts field, and add libmono-cecil0.4-cil to it.
  * debian/rules:
     + There is no need to install *.dll files by hand. dh_install will do it.
     + Don't delete *.mdb files if 'nostrip' option is set
     + dh_install must be called in binary targets
     + Disable building of policy file.
  * debian/installcligac
     + Do not try to install policy file in GAC

 -- Jose Carlos Garcia Sogo <jsogo@debian.org>  Mon, 09 Apr 2007 23:57:29 +0200

cecil (0.4.3-2) unstable; urgency=low

  * debian/control:
    + Update to use my debian.org mail address
