@@ -3,7 +3,7 @@ Section: devel
 Priority: optional
 Maintainer: Debian CLI Libraries Team <pkg-cli-libs-team@lists.alioth.debian.org>
 Uploaders: Sebastian Dröge <slomo@debian.org>, Jose Carlos Garcia Sogo <jsogo@debian.org>
-Build-Depends: debhelper (>= 5), dpatch
+Build-Depends: debhelper (>= 7), dpatch
 Build-Depends-Indep: cli-common-dev (>= 0.5.4),
  mono-devel (>= 2.0),
  sharutils,
