@@ -4,8 +4,11 @@ cecil (0.6-2) UNRELEASED; urgency=low
     + updated for Mono 2.0 transition
   * debian/control:
     + added Homepage field, dropped from long description
+    + debhelper dependency bumped to >= 7
+  * debian/compat bumped to 7
+  * debian/rules updated: using dh7-style
 
- -- David Paleino <d.paleino@gmail.com>  Sat, 07 Feb 2009 21:08:00 +0100
+ -- David Paleino <d.paleino@gmail.com>  Sat, 07 Feb 2009 21:18:00 +0100
 
 cecil (0.6-1) unstable; urgency=low
 
